feat: mobile design and footer add

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
-:root{
-  --light-white: #f0f2ef;
-  --light-purple: #dec0f1;
-  --dark-purple: #330036
+:root {
+    --light-white: #f0f2ef;
+    --light-purple: #dec0f1;
+    --dark-purple: #330036;
 }
 
 #root {
-  background-color: var(--light-purple);
+    background-color: var(--light-purple);
 }
-body, html {
-  background-color: var(--light-purple);
-  font-family: "Poppins", serif !important;
+body,
+html {
+    background-color: var(--light-purple);
+    font-family: "Poppins", serif !important;
 }
