--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,11 +1,17 @@
 #logo {
-  width: 14%;
-  padding: 0.8em;
+    width: 14%;
+    padding: 0.8em;
 }
 .navbar_container {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  background-color: var(--light-white);
-  
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    background-color: var(--light-white);
+}
+
+@media screen and (max-width: 768px) {
+    #logo {
+        width: 40%;
+        padding: 1.2em;
+    }
 }
