--- a/src/components/taskboard/card/card.css
+++ b/src/components/taskboard/card/card.css
@@ -1,16 +1,36 @@
+.card_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-height: 300px;
+    overflow-y: auto;
+    scrollbar-color: var(--dark-purple) var(--light-purple);
+    scrollbar-width: thin;
+    justify-content: space-evenly;
+}
+
 .card_item {
     flex: 0 0 calc(33.33% - 16px);
     margin: 10px;
     padding: 20px;
     text-align: center;
-    border-radius: 8px;
     box-shadow: 5px 5px 5px var(--dark-purple);
     border-radius: 30px !important;
+    width: 300px !important;
 }
+
 .btn_container {
     align-items: center;
     display: flex;
     justify-content: center;
     padding: 0.8em;
     gap: 0.8em;
+}
+
+@media screen and (max-width: 768px) {
+    .card_item {
+        padding: 10px;
+        max-width: 90% !important;
+        flex: 1 1 auto;
+    }
 }
