--- a/src/components/taskboard/taskboard.css
+++ b/src/components/taskboard/taskboard.css
@@ -1,22 +1,22 @@
 section {
     background-color: var(--light-purple);
 }
+
 .taskboard_container {
-    margin: 0 20px 20px 20px;
+    margin: 0 50px 20px 50px;
     border-radius: 20px;
     background-color: var(--light-white);
     padding: 20px;
+
 }
 
 .taskboard_title {
     text-align: center;
 }
-.card_container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-height: 300px;
-    overflow-y: auto;
-    scrollbar-color: var(--dark-purple) var(--light-purple);
-    scrollbar-width: thin;
+
+@media screen and (max-width: 768px) {
+    .taskboard_container {
+        margin: 0 20px 20px 20px;
+    }
+    
 }
